--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.3",
     "moment": "^2.29.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "rss": "^1.2.2",
     "rss-parser": "^3.12.0"
   }
