--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.3",
     "moment": "^2.29.1",
+    "node": "^17.7.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "rss": "^1.2.2",
